fix popup size flickering on open

--- a/src/popup/views/authorize/authorize.css
+++ b/src/popup/views/authorize/authorize.css
@@ -1,4 +1,11 @@
 .authorize-view {
+  .locker-wrapper {
+    min-height: 40px;
+  }
+
+  .input-field--invalid {
+    margin-bottom: 2.5px;
+  }
 }
 
 
